[MOD] Swagger ciclos y familias
