# app/Http/Controllers/Api/FamiliaController.php
@@ -11,23 +11,22 @@ class FamiliaController extends Controller
 {
     /**
      * Display a listing of the resource.
+     *
+     * @return \Illuminate\Http\Response
      */
+
     /**
      * @OA\Get(
      *      path="/api/familias",
      *      operationId="getFamiliasList",
      *      tags={"Familias"},
-     *      summary="Get list of Familias",
-     *      description="Returns list of Familias",
+     *      summary="Pedir la lista de familias",
+     *      description="Devuelve la lista de todas las familias registradas",
      *      @OA\Response(
      *          response=200,
      *          description="Successful operation",
      *          @OA\JsonContent(ref="#/components/schemas/FamiliaResource")
-     *       ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
+     *       )
      *     )
      */
     public function index()
@@ -46,9 +45,38 @@ class FamiliaController extends Controller
     /**
      * Display the specified resource.
      */
-    public function show(Familias $familias)
+
+    /**
+     * @OA\Get(
+     *      path="/api/familias/{id}",
+     *      operationId="getFamiliaById",
+     *      tags={"Familias"},
+     *      summary="Pedir la información de una familia",
+     *      description="Devuelve la información de la familia requerida a partir de su id",
+     *      @OA\Parameter(
+     *           name="id",
+     *           description="Familia id",
+     *           required=true,
+     *           in="path",
+     *           @OA\Schema(
+     *               type="integer"
+     *           )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Operación realizada con éxito",
+     *          @OA\JsonContent(ref="#/components/schemas/FamiliaResource")
+     *       ),
+     *     @OA\Response(
+     *           response=400,
+     *           description="Bad Request"
+     *       )
+     *     )
+     */
+    public function show(int $id)
     {
-        //
+        $familia = Familias::findOrFail($id);
+        return response()->json(new FamiliaResource($familia), 200);
     }
 
     /**
